test(scenes): give the pillar scene's synthetic plan the start node every real path has